# Mix_Wordkflow

./: .gitignore  CMakeLists.txt  README.md
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Domain/: Channel.h  Session.h  StemRole.h
Source/Engine/: AudioEngine.cpp  AudioEngine.h  Compressor.h  EqDsp.h  SpectrumAnalyzer.h  StemAnalysis.h
Source/Guidance/: AnalysisFeedback.h  MixStage.h  Recommendation.h
Source/UI/: AnalysisPanelComponent.h  ChannelStripComponent.cpp  ChannelStripComponent.h  CompressorEditorComponent.cpp  CompressorEditorComponent.h  EqEditorComponent.cpp  EqEditorComponent.h  GuidedPanelComponent.cpp  GuidedPanelComponent.h  MeterComponent.h  TimelineComponent.h
docs/: ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  MIXING_STAGES.md  MVP_SCOPE.md  PROJECT_DEFINITION.md  USER_FLOW.md  WORKFLOW.md
